# mkps2iso

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
examples/: example.xml
src/dumps2iso/: dvdreader.cpp  dvdreader.h  isoparser.cpp  isoparser.h  main.cpp  xmlwriter.cpp  xmlwriter.h
src/mkps2iso/: crc.h  dvdwriter.cpp  dvdwriter.h  isobuilder.cpp  isobuilder.h  logo.h  main.cpp  xmlreader.cpp  xmlreader.h
src/shared/: common.cpp  common.h  ecma_167.h  iso_fs.h  layout.h  listview.h  mmappedfile.cpp  mmappedfile.h  osta_udf.h  platform.cpp  platform.h  xml.h
